--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,9 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/mmistakes"
 
+footer_scripts:
+  - http://cdn.mathjax.org/mathjax/latest/MathJax.js
+
 
 # Reading Files
 include:
