--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/mmistakes"
 
-footer_scripts:
+head_scripts:
   - http://cdn.mathjax.org/mathjax/latest/MathJax.js
 
 
