--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ description              : &description "A flexible Jekyll theme for your blog o
 url                      :  "https://l0vest0rm.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  :  "" # the subpath of your site, e.g. "/blog"
 repository               : "l0vest0rm/l0vest0rm.github.io"
+collections_dir : "collections"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs            : true # true, false (default)
 words_per_minute         : 200
@@ -252,9 +253,8 @@ defaults:
       type: pets
     values:
       layout: single
-      author_profile: true
-      share: true
-      comment: true
+      sidebar:
+        nav: "docs"
   # _portfolio
   - scope:
       path: ""
