--- a/_config.yml
+++ b/_config.yml
@@ -195,13 +195,7 @@ collections:
   docs:
     output: true
     permalink: /:collection/:path/
-  recipes:
-    output: true
-    permalink: /:collection/:path/
-  pets:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
+  ml:
     output: true
     permalink: /:collection/:path/
 
@@ -238,31 +232,14 @@ defaults:
       comments: false
       sidebar:
         nav: "docs"
-  # _recipes
+  # _ml
   - scope:
       path: ""
-      type: recipes
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
-  # _pets
-  - scope:
-      path: ""
-      type: pets
+      type: ml
     values:
       layout: single
       sidebar:
         nav: "docs"
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: false
-      share: true
 
 
 # Sass/SCSS
